# fbmark_v2

./: .gitignore  Cargo.toml  README.md  config.yaml
migrations/: 20231002153303_create_bookmarks.up.sql  20231002153310_create_tags.up.sql  20231002153315_create_bmarks_tags.down.sql  20231002153315_create_bmarks_tags.up.sql
src/: adapters.rs  app.rs  event.rs  main.rs  models.rs  settings.rs  tui.rs  ui.rs  update.rs
src/adapters/: sqlite.rs  tagpacker.rs
src/models/: bookmarks.rs  tags.rs
src/ui/: components.rs  helpers.rs  render.rs
src/ui/components/: create.rs  help.rs  scrolling.rs  search.rs
