[package]
name = "fbmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-trait = "0.1"
better-panic = "0.3"
chrono = "0.4"
config = "0.13"
crossterm = "0.27"
dotenvy = "0.15"
lazy_static = "1.4"
libc = "0.2"
open = "5"
ratatui = { version = "0.23", features = ["all-widgets"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
simsearch = "0.2"
sqlx = { version = "0.7", features = ["sqlite", "macros", "runtime-tokio"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tui-input = "0.8"
url = { version = "2", features = ["serde"] }
